# swirl-api

./: .gitignore  LICENSE  macro.abbd6fb08c9d5fcad94d022c8ef5530f70c300fc2ff22ce770f5f8fe8e244569  pyproject.toml
_project_files/: api_struct.txt  dev.txt
swirl/: data_models.py  evaluator.py  macro_builder.py  swirler.py
swirl/swirlenv/: macro.3fcf0fccde93eeec3a3155630730bffbc0a69a83a85f9102798eec54cc444b6e.json  macro.df01480e39b8fccbdcadb315098da7327f4631515587068c712c36273252307a.json
swirl_api/: models.py  server.py
tests/: create.py  errors.py  evaluator.py  macro_builder.py  reload.py  resolve.py  resolver.py  swirl.py  swirler.py  test_swirl_api.py
tests/test_env/: macro.AOC.json  macro.CoC.json  macro.Sine.json  macro.another_mac.json  macro.cosine.json  macro.cuboid.json  macro.f4924548284b0dd2f6fc8dcf0e7d5033ab5ea9be8545cab6806bfafff4a794df.json  macro.f706e066d9963aef78009fafc2a859a0852d16f1ecbaa6b61c60696bbec30d5c.json  macro.intercept.json  macro.mk_test.json  macro.my_macro.json  macro.my_macro2.json  macro.my_macro3.json  macro.profit.json  macro.slope.json  macro.tangent.json  package.marky.json  package.math.json  package.science.json
tests/test_macros/: macro.Sine.json  macro.addOne.json  macro.cuboid.json  macro.divideTwo.json  macro.factorial.json  macro.minusOne.json  macro.multiplyTwo.json  macro.square.json  macro.tangent.json
tests/test_packages/: package.marky.json  package.math.json
