[tool.poetry]
name = "swirl-api"
version = "0.1.0"
description = ""
authors = ["arkhon7 <reviuy9@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
simpleeval = "^0.9.12"
dacite = "^1.6.0"
fastapi = {extras = ["all"], version = "^0.74.1"}

[tool.poetry.dev-dependencies]
pytest = "^5.2"
mypy = "^0.931"
flake8 = "^4.0.1"
black = "^22.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
