[tool.black]
line-length = 130

[tool.poetry]
name = "swirl-api"
version = "0.1.0"
description = ""
authors = ["arkhon7 <reviuy9@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
dacite = "^1.6.0"
dill = "^0.3.4"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
mypy = "^0.931"
flake8 = "^4.0.1"
black = "^22.1.0"
diagrams = "^0.21.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
